--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,12 @@ plugins {
     id 'org.springframework.boot' version '2.6.11'
     id 'io.spring.dependency-management' version '1.0.13.RELEASE'
     id 'java'
+    id 'checkstyle'
+}
+
+checkstyle {
+    maxWarnings = 0
+    toolVersion = "10.3.3"
 }
 
 group = 'com.flab'
