--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,4 +31,4 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: gradle integrationTest
-        run: ./gradlew integrationTest
+        run: ./gradlew test
