--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,1 @@
-spring.datasource.url=jdbc:h2:tcp://localhost/~/WorkSpace/DB/testDB
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.h2.console.enabled=true
