--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,9 @@ spring.datasource.url=jdbc:h2:mem:testdb;MODE=MYSQL;DB_CLOSE_DELAY=-1
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
+spring.sql.init.mode=always
 spring.h2.console.enabled=true
 spring.jpa.defer-datasource-initialization=true
+logging.level.web = debug
+logging.level.sql = debug
+spring.jpa.hibernate.ddl-auto=create
