spring-security-test 추가

--- a/build.gradle
+++ b/build.gradle
@@ -43,9 +43,7 @@ dependencies {
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation("org.junit.vintage:junit-vintage-engine") {
-        exclude group: "org.hamcrest", module: "hamcrest-core"
-    }
+    testImplementation 'org.springframework.security:spring-security-test'
     testImplementation 'org.testcontainers:mysql'
 }
 
